--- a/app/package.json
+++ b/app/package.json
@@ -22,12 +22,15 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/core": "4.5.3",
+    "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/google-maps": "^4.5.3",
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.2.8",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.7",
@@ -41,6 +44,10 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "Necesitamos tu ubicación para recomendarte ubicaciones"
+      },
+      "cordova-plugin-local-notification": {}
     }
   }
 }
