--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.5.3",
     "@ionic-native/device-orientation": "^4.7.0",
     "@ionic-native/geolocation": "^4.7.0",
@@ -33,6 +34,7 @@
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
     "cordova-plugin-badge": "^0.8.7",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.2.8",
@@ -65,7 +67,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
